Add contracts representation and parsing. Much thanks to Peter for the initial implementation

--- a/clang/lib/Sema/CMakeLists.txt
+++ b/clang/lib/Sema/CMakeLists.txt
@@ -42,6 +42,7 @@ add_clang_library(clangSema
   SemaCodeComplete.cpp
   SemaConcept.cpp
   SemaConsumer.cpp
+  SemaContract.cpp
   SemaCoroutine.cpp
   SemaCUDA.cpp
   SemaDecl.cpp
