--- a/llvm/CMakeLists.txt
+++ b/llvm/CMakeLists.txt
@@ -819,6 +819,11 @@ option (LLVM_ENABLE_SPHINX "Use Sphinx to generate llvm documentation." OFF)
 option (LLVM_ENABLE_OCAMLDOC "Build OCaml bindings documentation." ON)
 option (LLVM_ENABLE_BINDINGS "Build bindings." ON)
 
+option(ERICWF_DEBUG "Enable debug output that ericwf has added and needs to remove" OFF)
+if (ERICWF_DEBUG)
+    add_compile_definitions(ERICWF_DEBUG_ENABLED)
+endif()
+
 set(LLVM_INSTALL_DOXYGEN_HTML_DIR "${CMAKE_INSTALL_DOCDIR}/llvm/doxygen-html"
     CACHE STRING "Doxygen-generated HTML documentation install directory")
 set(LLVM_INSTALL_OCAMLDOC_HTML_DIR "${CMAKE_INSTALL_DOCDIR}/llvm/ocaml-html"
